# roadporrada

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  modern-cpp-game-patterns.md  roadporrada.cpp  vcpkg.json
